<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sabritas</string>
    <string name="add">Agregar</string>
    <string name="delete">Eliminar</string>
    <string name="brand">Marca</string>
    <string name="flavor_presentation">Sabor/Presentación</string>
    <string name="grams">Gramos</string>
    <string name="existence">Existencia</string>
    <string name="price_to_the_public">Precio al público</string>
    <string name="search_by_name">Buscar por nombre…</string>
    <string name="in_existence">en existencia</string>
    <string name="without_results">Sin resultados.</string>
    <string name="are_you_sure_of">Está seguro de</string>
    <string name="cancel">Cancelar</string>
    <string name="failed_to_delete_image">Error al eliminar la imagen.</string>
    <string name="this_field_is_required">Este campo es obligatorio.</string>
    <string name="failed_to_remove_chips">Error al eliminar la sabrita.</string>
    <string name="failed_to_query_the_data">Error al consultar los datos.</string>
    <string name="last_update">Última actualización</string>
    <string name="add_chips">Agregar sabrita</string>
    <string name="there_are_still_empty_fields">Aún hay campos vacíos.</string>
    <string name="update_chips">Actualizar sabrita</string>
    <string name="chips_updated">Sabrita actualizada.</string>
    <string name="failed_to_update_chips">Error al actualizar la sabrita.</string>
    <string name="failed_to_add_chips">Error al agregar la sabrita.</string>
    <string name="chips_added">Sabrita agregada.</string>
    <string name="chips_removed">Sabrita eliminada.</string>
    <string name="uploading_image">Subiendo imagen…</string>
    <string name="error_uploading_image">Error al subir la imagen.</string>
    <string name="unknown">Desconocido</string>
    <string name="total_items">Elementos totales: </string>
    <string name="items_found">Elementos encontrados: </string>
    <string name="no_network_connection">Sin conexión de red.</string>
    <string name="go_to_settings">Ir a configuración</string>
    <string name="you_have_connection">Tienes conexión.</string>
    <string name="we_welcome_you_to_chips">Te damos la bienvenida a Sabritas</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_google">Acceder con Google</string>
    <string name="you_do_not_have_an_account">¿No tienes cuenta?… Selecciona un método de autenticación para crear una.</string>
    <string name="wait_a_moment" tools:ignore="Typos">Espere un momento…</string>
    <string name="welcome">Bienvenido a Sabritas</string>
    <string name="see_you_soon">Nos vemos pronto.</string>
    <string name="error_code">Código de error</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="you_have_logged_out">Has cerrado sesión.</string>
    <string name="are_you_sure_to_take_this_action">¿Está seguro de realizar esta acción?</string>
    <string name="failed_to_log_out">Error al cerrar sesión.</string>
</resources>