<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_min"
    android:backgroundTint="@color/gray_50"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/common_padding_max">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPackage"
                android:layout_width="@dimen/image_width_and_height"
                android:layout_height="@dimen/image_width_and_height"
                android:layout_margin="@dimen/common_padding_min"
                android:background="@color/gray_100"
                app:shapeAppearance="@style/ImageWithEdgesRoundedInHalf" />

            <LinearLayout
                android:id="@+id/llTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_min"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="@string/brand" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPresentation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="@string/flavor_presentation" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGrams"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/common_padding_min"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="@string/grams" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvExistence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_padding_min"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="@string/existence" />
                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="@string/price_to_the_public" />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_min"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLastUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/last_update"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>