<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_max">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgIconApp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/common_padding_max"
                android:layout_marginBottom="@dimen/common_padding_min"
                android:src="@drawable/ic_chips" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWelcomeToApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:text="@string/we_welcome_you_to_chips"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/red_700" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_min"
                android:backgroundTint="@color/red_700"
                android:text="@string/login_email"
                android:textAllCaps="false"
                android:textColor="@color/colorOnPrimary"
                app:cornerRadius="@dimen/common_padding_max"
                app:icon="@drawable/ic_email"
                app:iconTint="@color/colorOnPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginBottom="@dimen/common_padding_min"
                android:backgroundTint="@color/colorOnPrimary"
                android:text="@string/login_google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="@dimen/common_padding_max"
                app:icon="@drawable/ic_google"
                app:iconTintMode="multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_min"
                android:background="@color/orange_a400"
                android:text="@string/you_do_not_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                tools:text="Términos y condiciones" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>