<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBrand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/atvBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFlavorPresentation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:hint="@string/flavor_presentation"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="Ej. Original, Adobadas, Flamin Hot, etc..."
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFlavorPresentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:nextFocusForward="@id/etGrams" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGrams"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_weight="1"
                android:hint="@string/grams"
                app:counterEnabled="true"
                app:counterMaxLength="3"
                app:helperText="10 - 500"
                app:helperTextEnabled="true"
                app:suffixText="g">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGrams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusForward="@id/etExistence" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilExistence"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_weight="1"
                android:hint="@string/existence"
                app:counterEnabled="true"
                app:counterMaxLength="3"
                app:helperText="1 - 999"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExistence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusForward="@id/etPrice" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:hint="@string/price_to_the_public"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:helperText="10 - 100"
            app:helperTextEnabled="true"
            app:prefixText="$"
            app:suffixText="MXN">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits=".0123456789"
                android:inputType="numberDecimal"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgChipsPreview"
                android:layout_width="@dimen/image_width_and_height_preview"
                android:layout_height="@dimen/image_width_and_height_preview"
                android:background="@color/gray_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ImageWithEdgesRoundedInHalf" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgChips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_image_search"
                app:layout_constraintBottom_toBottomOf="@id/imgChipsPreview"
                app:layout_constraintEnd_toEndOf="@id/imgChipsPreview"
                app:layout_constraintStart_toStartOf="@id/imgChipsPreview"
                app:layout_constraintTop_toTopOf="@id/imgChipsPreview" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="@dimen/image_width_and_height_preview"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:visibility="gone"
            app:trackCornerRadius="@dimen/common_padding_max"
            tools:progress="50"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProgress"
            android:layout_width="@dimen/image_width_and_height_preview"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            tools:text="@string/uploading_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLastModification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            tools:text="@string/last_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:src="@drawable/ic_cancel"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:enabled="false"
                android:src="@drawable/ic_check_circle"
                app:tint="@color/white"
                tools:enabled="true"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>